@@ -3,6 +3,8 @@ package tom.api;
 import java.io.Serializable;
 import java.util.UUID;
 
+import org.apache.commons.lang3.StringUtils;
+
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
 
@@ -10,7 +12,7 @@ public record DocumentId(UUID value) implements Serializable {
 
 	@JsonCreator
 	public DocumentId(String strValue) {
-		this(strValue == null || strValue.isBlank() ? null : UUID.fromString(strValue));
+		this(StringUtils.isBlank(strValue) ? null : UUID.fromString(strValue));
 	}
 
 	@JsonValue
